# ivy

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/microlog/: microlog.h
include/: biome.hpp  camera.hpp  collider.hpp  components.hpp  contexts.hpp  cursor_dispatcher.hpp  mesh.hpp  paths.hpp  prebuilt.hpp  sdf.hpp  shlighting.hpp  texture.hpp  transform.hpp  util.hpp  vkport.hpp
include/core/: caches.hpp  camera.hpp  contexts.hpp  material.hpp  mesh.hpp  texture.hpp
include/exec/: globals.hpp  user_interface.hpp  viewport.hpp
include/ngp/: din.hpp
shaders/: albedo.frag  collider.frag  environment.frag  mesh.vert  normals.frag  post.frag  screen.vert  sdf.frag
source/: biome.cpp  caches.cpp  camera.cpp  contexts.cpp  cursor_dispatcher.cpp  main.cpp  mesh.cpp  prebuilt.cpp  sdf.cpp  shlighting.cpp  texture.cpp
source/core/: caches.cpp  camera.cpp  contexts.cpp  mesh.cpp  polygon.cpp  texture.cpp  transform.cpp
source/exec/: globals.cpp  user_interface.cpp  viewport.cpp
source/targets/: din.cpp  din_cuda.cu  features.cpp  sdf.cpp
